--- a/assets/sass/base/style.scss
+++ b/assets/sass/base/style.scss
@@ -15,6 +15,29 @@ body {
   position: relative;
 }
 
+.dev-viewport {
+    ul {
+        // padding: 0;
+        // margin: 0;
+        // list-style-type: none;
+    }
+}
+
+.dev-slides {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.dev-slides:after {
+    content: '.-.';
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
 .my-slider {
 
   img {
