--- a/assets/sass/base/style.scss
+++ b/assets/sass/base/style.scss
@@ -208,3 +208,15 @@ body {
   }
 
 }
+.ken-burn-wrapper {
+  width: 100%;
+  height: 8px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.ken-burn-progress {
+  width: auto;
+  height: 100%;
+  background: red;
+}
