--- a/assets/sass/base/style.scss
+++ b/assets/sass/base/style.scss
@@ -13,19 +13,20 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  > ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+}
+.dev-slider {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  list-style-type: none;
 
-    &:after {
-      content: '.-.';
-      display: block;
-      clear: both;
-      visibility: hidden;
-      line-height: 0;
-      height: 0;
-    }
+  &:after {
+    content: '.-.';
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
   }
 }
 .my-slider {
