rename files, add prettify, rename API methods, rebuild structure, make documenation.

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,5 +1,8 @@
 // VARIABLES | BASE
 
 // Colors
-$base-primary-color: #10539A;
+$base-font-color: rgb(111, 124, 130);
+$base-primary-color: rgb(136, 181, 26);
+$base-prettify-color: rgb(255, 108, 67);
+$base-accent-color: rgb(41, 46, 49);
 
